[tool.poetry]
name = "michael"
version = "1.0"
description = "this is a test to show michael how poetry works"
authors = ["michael"]
license = "michael's lisence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
